syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.checkinn.user.grpc";
option java_outer_classname = "UserProto";

service UserService {
  rpc RegisterUser (RegisterRequest) returns (UserResponse);
  rpc GetUserById (GetUserRequest) returns (UserResponse);
  rpc LoginUser (LoginRequest) returns (UserResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (google.protobuf.Empty);
}

enum UserRole {
  USER = 0;
  OWNER = 1;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string fullName = 4;
  UserRole role = 5;
}

message GetUserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string fullName = 4;
  string role = 5;
}

message LoginRequest {
  string usernameOrEmail = 1;
  string password = 2;
}

message ResetPasswordRequest {
  string email = 1;
  string newPassword = 2;
}